<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/login_background"
    tools:context=".confirm_email">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/app_icon_image" />

    <TextView
        android:id="@+id/title_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm_email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewInstructions"
        android:layout_below="@id/title_sign_up"
        android:text="@string/please_enter_the_confirmation_code_that_was_sent_to_the_email_you_provided"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#F5DBDB"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInstructions"
        android:id="@+id/confirmation_code_row"
        android:layout_gravity="center_horizontal"
        android:columnCount="6"
        android:rowCount="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/editTextFirstNum"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:autofillHints="First Number of Confirmation Number"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />

        <EditText
            android:id="@+id/editTextSecondNum"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="Enter Last Name"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />

        <EditText
            android:id="@+id/editTextThirdNum"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="First Number of Confirmation Number"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />

        <EditText
            android:id="@+id/editTextFourthNum"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="Enter Last Name"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />

        <EditText
            android:id="@+id/editTextFifthNum"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="First Number of Confirmation Number"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />

        <EditText
            android:id="@+id/editTextSixthNum"
            android:layout_row="0"
            android:layout_column="5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="Enter Last Name"
            android:backgroundTint="#F5DBDB"
            android:hint="@string/asterisk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColorHint="#F5DBDB"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#C4F7AA" />
    </GridLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmation_code_row"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FF5722"
        android:radius="4dp"
        android:shape="rectangle"
        android:text="@string/confirm_email"
        android:textColorLink="#5FBE07"
        android:textStyle="bold" />
</RelativeLayout>